# Sentinel

./: .gitignore  .kilocodeignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_ARCHETYPE_AWARE.md  CHANGELOG_risk_surface.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  SELLABLE_PRODUCT_INTEGRATION_REPORT.md  SELLABLE_PRODUCT_ROADMAP.md  TOLARIA_FIX_PLAN.md  debug_i18n.py  debug_test.py  front.html  install.ps1  pyproject.toml  requirements.txt  sentinel.md  sentinel.py  sentinel_next_prompt.md  setup.py  time_to_do_this.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.kilo/rules/: sentinel-file-bridge.md
benchmarks/fixtures/: README.md
config/: audit_rules.json  config.json  patterns.json
docs/: API.md  ARCHITECTURE.md  INSTALL_AND_UPGRADE.md  NEXT_LEVEL_ROADMAP.md  PRIVACY_AND_SAFETY.md  PRODUCT_TIERS.md  USER_GUIDE.md
examples/: scan_benchmark.sh  scan_dashboard.sh  scan_fastapi.sh  scan_react.sh  scan_report.sh  scan_self.sh
src/: adapters.py  auditor.py  classify.py  graph.py  knowledge.py  monitor.py  reporter.py  retriever.py  sentinel.py  sentinel_mcp.py  suggester.py  utils.py  verifier.py
tests/: test_archetype_regressions.py  test_auditor.py  test_classification_regressions.py  test_knowledge.py  test_knowledge_repo.py  test_ladybird_regressions.py  test_mcp.py  test_regression_fixtures.py  test_report_quality.py  test_sentinel.py  test_weighted_entry_points.py
tools/: capture_screenshots.ps1  debug_i18n.py  debug_test.py
(+9 files in other folders)
