[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "N802", "N815"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
